# MAVRIC-Systems

./: .gitignore  Architecture.pptx  Ard1.py  GitHub Quickstart Guide.md  Pi_ver1.ino  Pub.py  README.md  StringClient.py  Sub.py  Team Leads README.md
Base Station/: PTZ_Test.py  RoverArmStick.py  RoverBaseStation.py  RoverDriveStick.py  armControllerPOC.py  enabling point turns.txt  phoenix.py
Base Station/Program Configs/: default.rviz
Base Station/Rev3/: Base.py  Base.ui  Controls.py  Linker.py
Base Station/Rev4/: Base.ui
Base Station/Scarab Base Station/: Arm_Sim.py  Base_Data.py  Base_Main.py  Mobile_Main.py  scarab.py
Control Systems/: BasestationGUI2.py  Command Strings List.xlsx  autonomous_flowchart.xml
Electrical/: Drive Board Connector HAT.fzz  MasterDiagram.drawio  PowerBudget.txt  PowerBudget.xlsm  PowerBudget.xlsx  Sci-Team-Details.txt  Wiring Diagram.xml
Electrical Design/: PowerBudget.xlsm  System.pptx
Electrical Design/Raspberry Pi HATs/Template HAT/: HAT.kicad_pcb  HAT.sch  PowerProtection.sch  RPiConnector.sch
Electrical Design/Raspberry Pi HATs/Template HAT/gerber/: HAT-B.Cu.gbl  HAT-B.SilkS.gbo  HAT-Edge.Cuts.gm1  HAT-F.Cu.gtl  HAT-F.SilkS.gto
Electrical Design/Raspberry Pi HATs/Template HAT/modules/: StandoffMounts.kicad_mod
Electrical/Circuit Boards/Arm Power Distribution/: Arm Power Distribution.kicad_pcb  Arm Power Distribution.pro  Arm Power Distribution.sch
Electrical/Circuit Boards/Arm Power Distribution/plotter/: Arm Power Distribution-B.Cu.gbr  Arm Power Distribution-B.Mask.gbr  Arm Power Distribution-B.SilkS.gbr  Arm Power Distribution-Eco1.User.gbr  Arm Power Distribution-Eco2.User.gbr  Arm Power Distribution-Edge.Cuts.gbr  Arm Power Distribution-F.Cu.gbr  Arm Power Distribution-F.Mask.gbr  Arm Power Distribution-F.SilkS.gbr  Arm Power Distribution-NPTH.drl  Arm Power Distribution.drl
Electrical/Circuit Boards/Jetson Add-On/: DigiKey_BOM.xlsx
Electrical/Circuit Boards/Jetson Add-On/Jetson_Addon/: Jetson_Addon  Jetson_Addon-cache.lib  Jetson_Addon.kicad_pcb  Jetson_Addon.pro  Jetson_Addon.sch  Jetson_Addon.sch-bak  Part_Library.dcm  (+4 more)
Electrical/Circuit Boards/KiCAD Libraries/: Ethernet_54602-908LF.mod  chips.dcm  connectors.dcm
Electrical/Raspberry Pi HATs/: ADC_testcode.py
Electrical/Raspberry Pi HATs/Template HAT/: PowerProtection.sch
Firmware/: RunDrive.sh  TalonSrx-Application-4.22-season2019.crf
Training Materials/: ROS Bootcamp.pptx
src/: CTestTestfile.cmake  cmake_install.cmake
src/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/catkin_generated/installspace/: _setup_util.py  mavricConfig.cmake
src/gtest/: CTestTestfile.cmake
src/mavric/: CMakeLists.txt  package.xml
src/mavric/launch/: Arm.launch  ArmBoard.launch  ArmPID.launch  Arm_Test.launch  Cameras.launch  Drive.launch  DriveBoard.launch  LinearActuator.launch  MasterBoard.launch  PID_Test.launch  Sensors.launch  Servos.launch  SystemCooling.launch  auto.launch  canableStart.bash  canableStartWRetry.bash  complex_auto.launch  expo.launch  extreme.launch  jetson.launch  masterAuto.launch  masterDrive.launch  masterScience.launch  newscience.launch  piinput.launch  real.launch  science.launch  startup.bash  tests.launch
src/mavric/msg/: Arm.msg  ArmData.msg  Armtrain.msg  Aruco.msg  Auto_Status.msg  Autonomous.msg  Cam.msg  Drivetrain.msg  GPS.msg  LED.msg  Object.msg  ObjectVector.msg  ScaleFeedback.msg  Steer.msg  Steercal.msg  Steertrain.msg  Ultrasonic.msg  Voltage.msg  Waypoint.msg
src/mavric/src/: 900MHz_Interface.py  Actuator_Interface.py  Actuator_Status.py  Actuator_Status_Interface.py  Adafruit_GPS.py  AdrTEST_LED.py  ArmAngle.py  ArmData  Arm_Controller.py  Arm_P.py  Arm_S.py  Autonomous_Interface.py  Autonomous_P.py  Autonomous_S.py  BNO055_Calibration.py  BNO055_IMU.py  BNO085_IMU.py  BTC_110S.py  Battery_Voltage.py  CAN_Arm_Train.cpp  CAN_Drive_Train_S.cpp  CAN_Input_Test.py  CAN_Output_Test.py  CAN_RobotEnable.py  CAN_RunTest.py  DriveBoard.launch  Drive_Feedback_Interface.py  Drive_Sim.py  Drive_Train_P.py  Drive_Train_S.py  DrivetrainHartbeat.py  DrivetrainHeartbeat.py  EBoxFans.py  Encoder_FB.cpp  Float64_Heartbeat.py  Float64_Interface_out.py  GPS_Interface.py  GPS_Neo-M9N.py  GPS_Sim.py  GPS_Stream.py  (+57 more)
src/mavric/src/Autonomous/: ArucoClass.py  ArucoDetectionState  ArucoDetectionThread.py  DriveTowardTagState.py  DriveTowardWaypointState.py  IdleState.py  ObjAvoidanceState.py  ReachedWaypointState.py  StateMachine.py  TagFinderState.py  TeleopState.py  TurnTowardWaypointState.py  aruco_test  arucotest.py  auto_globals.py  auto_main.py  cameratest  driver.py  test_aruco.py
src/mavric/src/Complex Autonomous/: ArucoDetectionThread.py  BankTowardPathPointState.py  Detector.py  DriveTowardPathPointState.py  IdleState.py  NextPathPointState.py  ReachedWaypointState.py  StateMachine.py  TurnTowardPathPointState.py  complex_globals.py  complex_main.py  driver.py  object_detection.py  pathing.py
src/mavric/src/PTZ_Control/: ONVIF_test.py  PTZ_Pano.py  PTZ_Pictures.py  Pano_Capture.py  Pano_Stitch.py  move.py
src/mavric/src/SparkCAN/: .SparkCAN.py.swp  CAN_Output_Test.py  README.md  SparkCAN.py  SparkCAN_Arm_Train.py  SparkCAN_Drive_Train.py  SparkController.py  Statuses.py  sparkTest.py  test.py
src/mavric/src/pySerialTransfer/: CRC.py  pySerialTransfer.py
src/mavric/test/: DrivetrainSW.py  Voltage_Monitor.py  phoenix.py
(+51 files in other folders)
