<?xml version="1.0"?>
<package>
  <name>mavric</name>
  <version>0.1.0</version>
  <description>The mavric package. Designed to operate the current revision of MAVRIC:Phoenix</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jtalbert@iastae.edu">pi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <!-- We don't really plan on sharing this in a useful way -->


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="repository">https://github.com/m2i/MAVRIC-Electrical/tree/ROS-Experiments</url> -->
  <url type="website">https://m2i.aere.iastate.edu/mavric/</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="jtalbert@iastate.edu">James Talbert</author>
  <author email="bcra@iastate.edu">Brady Anderson</author>
  <author email="jmobrien@iastate.edu">Jefferson O'Brien</author>
  <author email="aavande@iastate.edu">Alexander Vande Loo</author>
  <author email="foley146@iastate.edu">Morgan Foley</author>
  <author email="svashi@iastate.edu">Shivam Vashi</author>
  <author email="jmayes@iastate.edu">Jensen Mayes</author>
  <author email="jmraymer@iastate.edu">Jacob Raymer</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
